--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,8 +1,61 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%=title%></title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="/css/layout.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <%- style %>
   </head>
+
   <body>
-    <%-include('_footer')%> <%-body%> <%-include('_header')%>
+    <%- include('./partials/_header') -%>
+
+    <main>
+      <div class="layout-main"><%- body %></div>
+    </main>
+    <%- include('./partials/_footer') -%> <%- script %>
+    <script>
+
+      <% if (flash.success && flash.success.length > 0) {%>
+
+                     new Noty({
+                         theme: 'bootstrap-v4',
+                         text: '<%=flash.success%>',
+                         type: 'success',
+                         layout: 'topRight',
+                         timeout: 1500
+                     }).show();
+
+         <%}%>
+
+         <% if (flash.error && flash.error.length > 0) {%>
+
+                     new Noty({
+                         theme: 'bootstrap-v4',
+                         text: '<%=flash.error%>',
+                         type: 'error',
+                         layout: 'topRight',
+                         timeout: 1500
+                     }).show();
+
+             <%}%>
+    </script>
+
+    <script
+      src="https://kit.fontawesome.com/4286c095cf.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
